syntax = "proto3";

option java_package="userservice";
option java_multiple_files=true;
service UserService {
  rpc AddUser (UserRequest) returns (UserResponse);
  rpc GetUserByEmail (UserRequest) returns (UserResponse);
}

message UserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  bool exists = 5;
}
